Trimmed Preprocessing part in the report

--- a/report/ada2018.tex
+++ b/report/ada2018.tex
@@ -72,10 +72,10 @@ The dataset that we used for the training of our model consists of sentence pair
 The dataset we work with came in the TMX format. It was a dataset of 5.6 GB size. Thus, in order to work with it, we needed to divide the dataset into chunks or use samples we extract from it. Furthermore, we decided that while the TMX format might have its benefits, we did not need most of them. Therefore, we converted the dataset into a list of sentence pairs, and stored them within a pickle. Finally, we realized that our model required some normalization on each sentence via punctuation removal, lowercasing each word riddance from sentences beyond certain lengths.
 
 \subsection{Format Handling and Dividing the Dataset}
-As mentioned above, our dataset was too large to read all of it at once. Therefore, after experimenting with a couple of methods, we decided to use basic file-streaming to read, process and save chunks of the dataset. After deciding on an approximate size for each chunk, which was roughly 500 MB's, we created a pipeline. Simply put, the pipeline took a chunk, cleared the irrelevant tags off of it, grabbed each English-Dutch sentence pair with a regex. The pipeline treated possibilities like half of a line being in another chunk or the translation of a line being in another chunk. Furthermore, it paired each sentence with its translation, put the pair in a list, and pickled the list in a file. This way, we acquired clean sentence pairs in different chunks, which we can read one by one from the pickle file. Finally, we created a function to read chunks from a pickle for easy usage.
+As mentioned above, our dataset was too large to read all of it at once. Therefore, we decided to use basic file-streaming to read, process and save chunks of it. After deciding on an approximate size for each chunk, which was roughly 500 MB's, we created a pipeline. The pipeline took a chunk, cleared the irrelevant tags off, grabbed each English-Dutch sentence pair with a regex. It treated information left in two different chunks. After pairing them, it put the pair in a list, and wrote the list in a pickle file. This way, we acquired clean sentence pairs in different chunks, which we can read one by one.
 
 \subsection{Sampling}
-The developing process of models required small samples from the dataset to see the efficiency and quality of the model in a rough manner, before a proper evaluation process. However, just taking a chunk of the dataset would result with a high variation of low amounts of data. Therefore, we created a sampling function, which uses a preset of rules and extracts sentence pairs fitting that rule, then pickles them in another file for usage. This way, the accuracy of the model can be observed faster without an evaluation model on early stages. Also, we cleared the dataset off of some punctuation, transformed uppercase letters to lowercase and eliminated sentences beyond certain word counts. This was done to fit our dataset better for our model and remove irrelevant information.
+The developing process of models required small samples from the dataset to see the efficiency and quality of the model in a rough manner, before a proper evaluation process. However, just taking a chunk of the dataset would result with a high variation of low amounts of data. Therefore, we created a sampling function, which uses a preset of rules and extracts sentence pairs fitting that rule, then pickles them in another file for usage. This way, the accuracy of the model can be observed faster without an evaluation model on early stages. Also, we cleared the sentences off of some punctuation, transformed uppercase letters to lowercase and eliminated sentences beyond certain word counts. This was done to fit our dataset better for our model and remove noise.
 
 \section{The RNN Encoder-Decoder model}
 While regular neural networks are a powerful tool to train a model, they have one important limitation: they only take inputs of fixed length, and produce outputs of fixed lengths. For the translation of a sequence of words from English to Dutch this is not very useful, because both the length of the input and output sequence will vary between different sentences. We want to train a model that can take in any sentence of arbitrary length, and produce a corresponding translation. The solution to train this kind of model is provided by Recurrent Neural Networks(RNN)\footnote[3]{D. Bahdanau, K. Cho, Y. Bengio. 2014. Neural machine translation by jointly learning to align and translate. Retrieved from the arXiv database.} \footnote[4]{ I. Sutskever, O. Vinyals, Q. Le. 2014. Sequence to sequence learning with neural networks. Retrieved from the arXiv database.} \footnote[5]{K. Cho, B. van Merrienboer, C. Gulcehre, D. Bahdanau, F. Bougares, H. Schwenk, Y. Bengio. 2014. Learning phrase representations using RNN encoder-decoder for statistical machine translation. Retrieved from the arXiv database.}
