Moved text from report to notebook.

--- a/Main_notebook.ipynb
+++ b/Main_notebook.ipynb
@@ -33,7 +33,8 @@
     "    folder_separator = \"/\"\n",
     "\n",
     "plt.switch_backend('agg')\n",
-    "MAX_LENGTH = 16 # This depends on the length of sentences in our sample set..\n",
+    "MAX_LENGTH = 16 # This depends on the length of sentences in our sample set, it makes sure the set of weights for the\n",
+    "                # attention decoder has the right length.\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
