Final shortening for the report, renamed picture

--- a/report/ada2018.tex
+++ b/report/ada2018.tex
@@ -103,7 +103,8 @@ The sentences $y_{n}$ and $x_{n}$ are those that we have from the data. The prob
 We used an implementation from a PyTorch tutorial \footnote[6]{\href{https://pytorch.org/tutorials/intermediate/seq2seq_translation_tutorial.html}{PyTorch, 2017}} as the basis for our model. We looked into adapting the code to our needs, have it fit to our dataset, and interacted with the code in various places to implement some tweaks to the model, as discussed in the next section.
 
 \subsection{Changes to the model}
-When implementing the changes to the model we used a small sample from the dataset with sentences that are similar in grammar. We looked at the BLEU score computed after evaluating the trained model, which was compared to the one for the base model: 0.01850. We implemented and evaluated the following changes/tweaks to the PyTorch implementation:
+When implementing the changes to the model we used a small sample from the dataset with sentences that are similar in grammar. We looked at the BLEU score computed after evaluating the trained model, which was compared to the one for the base model: 0.01850. After experimenting with multiple changes, we have decided to implement the attention mechanism, teacher forcing, and reversing the input sentences, due to their higher scores.
+The results for all changes are below.
 
 \subsubsection*{Attention, Score: 0.02501}
 When using a regular decoder, the output vector from the encoder is all the decoder has to learn from and to base its translation on. This means the full input sentence and its meaning is now represented by one vector only.
@@ -111,13 +112,13 @@ When using a regular decoder, the output vector from the encoder is all the deco
 When using a decoder with attention mechanism, however, for each word that the decoder returns, it is provided with a set of attention weights. These weights tell the decoder which parts of the input vector are important to translate the word. This set of attention weights will be multiplied with the output vector from the encoder, to create a vector of weighted inputs for the decoder. For shorter sentences not all weights will be used \footnote[7]{Bahdanau, 2014}. 
 
 \subsubsection*{Teacher Forcing, Score: 0.04614}
-Teacher forcing is used in training the model, where instead of the last output from the decoder, the target tensor is fed to the decoder. Teacher forcing helps the model to learn coherent grammar, but if overexploited, the finalized model will have difficulty creating a grammatical structure by itself. Since the model is used to getting the first few words provided by the teacher, when it does not get these in the evaluation phase it does not know how to starting creating the output sentence\footnote[8]{PyTorch, 2017} \footnote[9]{ H. Jaeger. 2002. A tutorial on training recurrent neural networks, covering BPPT, RTRL, EKF and the ”echo state network” approach}. We chose to implement teacher forcing with a ratio of 0.5, so it was only applied on half of the sentences. This way, we could combine the utility it provided and prevented overuse.
+Teacher forcing is used in training the model, where instead of the last output from the decoder, the target tensor is fed to the decoder. Teacher forcing helps the model to learn coherent grammar, but if overexploited, the finalized model will have difficulty creating a grammatical structure by itself. Since the model is used to getting the first few words provided by the teacher, when it does not get these in the evaluation phase it does not know how to starting creating the output sentence\footnote[8]{PyTorch, 2017} \footnote[9]{ H. Jaeger. 2002. A tutorial on training recurrent neural networks, covering BPPT, RTRL, EKF and the ”echo state network” approach}. We chose to implement teacher forcing with a ratio of 0.5, to prevent it's overuse.
 
 \subsubsection*{Reversing the input, Score: 0.02149}
 Reversing the input (source) sentences when feeding them to the model to train has proven\footnote[10]{Sutskever, 2014} to decrease the distance between words in the source and in the target language. In other words, long-term dependencies are being replaced by short-term dependencies. This results in a higher probability of two words, each from a different language, which context is depended on each other to be close in distance.
 
 \subsubsection*{Activation functions, Score: 0.0}
-At first we tried to implement the log sigmoid and leaky relu activation functions, but in the original log softmax activation function a dimension was specified, which could not be specified for the other activation functions. Since the model would not train using those functions, we tried using activation functions for which the dimension could be specified, namely the softmax and softmin activation functions. For these functions, however, regardless of the number of iterations, lengthy sentences filled with unfrequent words were created. We think that the fact that no other activation function worked has to do with the way the model from the PyTorch implementation was set up, and that trying different activation functions is justified from a theoretical viewpoint \footnote[11]{PyTorch, 2017}.
+At first we tried to implement the log sigmoid and leaky relu activation functions, but in the original log softmax activation function a dimension was specified, which could not be specified for the other activation functions. Since the model would not train using those functions, we tried using activation functions for which the dimension could be specified, namely the softmax and softmin activation functions. For these functions, however, regardless of the number of iterations, lengthy sentences filled with infrequent words were created. We believe this is due to the way the model was built, and that trying different activation functions is justified from a theoretical viewpoint \footnote[11]{PyTorch, 2017}.
 
 \subsubsection*{Different NN units}
 We considered changing the linear units that make up the RNN in the Pytorch implementation into RNN or LSTM units, but since Pytorch created a custom RNN from the linear unit specific for this implementation, it did not work and did not make sense to change the linear unit.
@@ -126,19 +127,19 @@ We considered changing the linear units that make up the RNN in the Pytorch impl
 To evaluate the performances of our model we chose to write our own implementation of the widely used BLEU score. The BLEU score takes all the n-grams up until the specified n and calculates the amount of similarities between two sentences, where for each n-gram each word can only be used once to count towards a match with the other sentence. To calculate the BLEU score over a set of sentences, the geometric mean of the scores for each individual sentence is used \footnote[12]{K. Papineni, S. Roukos, T. Ward, W. Zhu. 2002 BLEU: a Method for Automatic Evaluation of Machine Translation Proceedings of the 40th Annual Meeting of the Association for Computational Linguistics (ACL)}.
 
 \section{Discussion}
-One of the limitations of our model is that the sentence pairs we used to train the model on were not that well aligned. While for each pair in the data both sentences expressed the same line in the movie, there are various cases where they were phrased in a different manner. This could have affected the training, and eventually lower its performance. Out of 50 training pairs, 9 were counted to be less well-aligned in this manner. It is difficult to estimate a ratio for the whole data, but at least a significant portion of the pairs are sub-optimal. Filtering these pairs out would require human intervention, checking for each pair individually if it is a good translation or not. Doing this for all our sentence pairs is beyond the scope of this project. Hence, we just trained on the data that we had, accepting that this fact lowers the performance of the model.
+One of the limitations of our model is that the sentence pairs we used to train the model on were not that well aligned. While for each pair in the data both sentences expressed the same line in the movie, there are various cases where they were phrased in a different manner. This could have affected the training, and eventually lower its performance. Out of 50 training pairs, 9 were counted to be poorly-aligned in this manner. It is difficult to estimate a ratio for the whole data, but at least a significant portion of the pairs are sub-optimal. Filtering these pairs out would require human intervention on a major scale, which is beyond the scope of this project. Hence, we just trained on the data that we had.
 
-There were a few changes that we tried to implement into our model, but that did not fit with the rest of the model. One of them was to try and write the attention mechanism ourselves. While during this course we have focused on the probabilistic approach towards NLP, there is also the symbolic approach, by writing top-down rules. We thought that we might create a different attention decoder to experiment with the symbolic approach. Rules could indicate which parts of the context vector to focus on. However, there are a few obstacles to this approach. Firstly, we would need to pos-tag the sentence to implement these rules. Secondly, the question of finding appropriate weights is a difficult one. It could be solved empirically, by training with several different weightings and compare the results, but this would require us to train multiple models to be able to evaluate the effects of different weightings. This led us to conclude creating a new attention mechanism is too costly in terms of computing power and time. Hence, we decided to not implement it.
+There were a few changes that we tried to implement into our model, but that did not fit with the rest of the model. One of them was to try and write the attention mechanism ourselves. While during this course we have focused on the probabilistic approach towards NLP, there is also the symbolic approach, by writing top-down rules. While this sounded pleasent in theory, creating such a weight system which is better than the existing one proved to be too demanding, due to the necessary training trials needed to test the results. Hence, we decided to not implement it.
+
+Finally, because of scale issues, we did not train over the whole dataset. Instead, we filtered sentence pairs on a maximum length of 15 words per sentence, starting with a pronoun, and followed by a form of to be or to have. We split this filtered dataset into training and test set in a 80/20 ratio. The total training time was 3 days. After training, our final model still had not learned a large vocabulary. However, learning this would just be a matter of time and computing power. The printout in Figure 1 shows three examples of the target sentence, and the translation that our model came up with. 
 
 \section{Conclusion}
-We have decided to implement all the changes that improved the evaluation score, which were the attention mechanism, teacher forcing, and reversing the input sentences.
-
-In the end, because of scale issues, we did not train over the whole dataset. Instead, we filtered sentence pairs on a maximum length of 15 words per sentence, starting with a pronoun, and followed by a form of to be or to have, to limit the size of our training data, while keeping a similar grammatical structure over our sentence pairs. We split this filtered dataset into training and test set in a 80/20 ratio. The total training time was 3 days. After this training, our final model still had not learned a large vocabulary. It knows the pronouns, articles, and some basic verbs, but can not translate nouns or sentence structures. However, learning this would just be a matter of time and computing power. The printout in Figure 1 shows three examples of the target sentence, and the translation that our model came up with. It is clear that the frequent, easy words get translated correctly, but the vocabulary is still small.
 
 When evaluating the translations that our model gave for the test set, we got the following BLEU scores between 0 and 1 for the various n-grams. 4-grams: 0.03, 3-grams: 0.09, 2-grams: 0.17, 1-grams: 0.29. So a considerable portion of the words gets correctly translated. We can conclude that the basis of our model works, albeit with a limited vocabulary, and is able to produce a somewhat meaningful translated sentence.
 
 \begin{figure}[h]
-    \includegraphics[width=7.8cm]{Screenshot (3).png}
+    \includegraphics[width=7.8cm]{Sample_output.png}
+    \caption{Sample from the output}
     \label{Figure 1}
 \end{figure}
 
