Trimmed further on report

--- a/report/ada2018.tex
+++ b/report/ada2018.tex
@@ -64,7 +64,7 @@ Baran İşcanlı \\
 
 Translating one word from one language to another can be done easily using traditional paper dictionaries. However, knowing the individual translation of each word is not enough to understand sentences or documents in the other language. The difficulty comes from language being compositional, thus the combining of words builds up meaning in the sentence. The final meaning of a sentence can not be reduced to individual meanings of the words, it also comes from their combinations. This is where traditional dictionaries fail, and machine translation comes in.\\
 
-There are several approaches to translating a piece of text. In recent years, the statistical approach, based on observations of large amounts of text and generating patterns from it, has seen great improvements, thanks to developments in the field of machine learning. For our project, the particular technique that we decided to use was Sequence to Sequence translation. This technique was pioneered in 2013, by Kalchbrenner and Blunsom \footnote[1]{N. Kalchbrenner, Phil Blunsom 2013. Recurrent Continuous Translation Models Association for Computational Linguistics}, and makes use of recurrent neural networks (RNN’s). Our aim is to produce a translation model that is based on this architecture. It will be trained on English-Dutch sentence pairs, and take in a sentence in English, and return its Dutch translation.
+There are several approaches to translating a piece of text. In recent years, the statistical approach, based on observations of large amounts of text and generating patterns from it, has seen great improvements, thanks to developments in the field of machine learning. Thus, for our project, we decided to use the particular statistical technique, Sequence to Sequence translation. This technique was pioneered in 2013, by Kalchbrenner and Blunsom \footnote[1]{N. Kalchbrenner, Phil Blunsom 2013. Recurrent Continuous Translation Models Association for Computational Linguistics}, and makes use of recurrent neural networks (RNN’s). Our aim is to produce a translation model that is based on this architecture. It will be trained on English-Dutch sentence pairs, and take in a sentence in English, and return its Dutch translation.
 
 For the training of our model we used sentence pairs from movie subtitles. The dataset was retrieved from Open Subtitles\footnote[2]{\href{http://opus.nlpl.eu/OpenSubtitles-v2018.php}{Open Subtitles}}. The data consists of translation pairs coupled together, so for each line uttered in the movie there is the English and the equivalent Dutch subtitle. An important advantage of using subtitles is that the text is well aligned, as compared to more freely translated datasets, such as books, articles or blogposts. For those sets the individual sentence pairs would fit less well to each other, making it much more difficult for the model to train on.
 
@@ -100,7 +100,7 @@ During the training of the model, both these RNN’s are jointly trained via gra
 \end{center}
 The sentences $y_{n}$ and $x_{n}$ are those that we have from the data. The probability depends on the parameters theta of our model, and is logarithmic for easier summation and to stay within computational bounds.
 
-We used an implementation from a PyTorch tutorial \footnote[6]{\href{https://pytorch.org/tutorials/intermediate/seq2seq_translation_tutorial.html}{PyTorch, 2017}} as the basis for our model. We looked into adapting the code to our needs, have it fit to our dataset, and interacted with the code in various places to implement some tweaks to the model, as discussed in the next section.
+We used an implementation from a PyTorch tutorial \footnote[6]{\href{https://pytorch.org/tutorials/intermediate/seq2seq_translation_tutorial.html}{PyTorch, 2017}} as the basis for our model. We looked into adapting the code to our needs and have it fit to our dataset.
 
 \subsection{Changes to the model}
 When implementing the changes to the model we used a small sample from the dataset with sentences that are similar in grammar. We looked at the BLEU score computed after evaluating the trained model, which was compared to the one for the base model: 0.01850. After experimenting with multiple changes, we have decided to implement the attention mechanism, teacher forcing, and reversing the input sentences, due to their higher scores.
